--- a/REPLIT-config.env
+++ b/REPLIT-config.env
@@ -1,23 +1,24 @@
 # ____REMOVE THIS LINE AFTER RENAMING REPLIT-config.env to config.env ____ 
- SESSION_ID= 
- MONGO_URI= 
- OWNER_NUMER= 
+ SESSION_ID= "DespisesDesire"
+
+ MONGO_URI= "mongodb://uzgaxfqktgpgentgvrqy:KTtxEvQMjl17dcCCcZN@bw4vifv5c0lstqzry1h9-mongodb.services.clever-cloud.com:2202/bw4vifv5c0lstqzry1h9"
+ OWNER_NUMER= "237698261295"
  THUMB_IMAGE = "https://telegra.ph/file/e737a6573663dcd99f96c.jpg" 
  port = 5000 
  email = "sam@secktor.live" 
  AUTO_BIO=false 
  global_url = "instagram.com" 
- OWNER_NAME = "Dileepa" 
+ OWNER_NAME = íɑʍDarryℓ" 
  AUTO_REACTION = false 
- FAKE_COUNTRY_CODE = 92 
+ FAKE_COUNTRY_CODE = 237 
  READ_MESSAGE = false 
  PREFIX = . 
  WARN_COUNT = 3 
  DISABLE_PM = false 
  ANTI_BAD_WORD = "fuck" 
- LEVEL_UP_MESSAGE= true 
+ LEVEL_UP_MESSAGE= false 
  WELCOME_MESSAGE =  "*Hi,* @user \n*Welcome in* @gname \n*Member count* : @count th" 
  THEME= NITHYA
- WORKTYPE = public 
- PACK_INFO = "NITHYA;dileepa" 
+ WORKTYPE = private
+ PACK_INFO = "Dems;íɑʍDarryℓ" 
  ANTILINK_VALUES = "chat.whatsapp.com"
